# qcu_dev

./: CMakeLists.txt  README.md
doc/: 1-introduction.md  2-wilson_dslash.md  init.md  modules.md
include/: qcu.h  qcu_complex.cuh  qcu_dslash_base.cuh  qcu_load_field.cuh  qcu_macro.cuh  qcu_point.cuh  qcu_wilson_dslash.cuh
include/kernel/: qcu_public_kernel.cuh  qcu_wilson_dslash.cuh  qcu_wilson_dslash_coalesce.cuh  qcu_wilson_dslash_naive.cuh
src/: dslash.cu  qcu.cu  qcu_load_filed.cu  qcu_wilson_dslash.cu
